--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "webpack-cli": "^5.0.0",
         "webpack-dev-server": "^4.11.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "jquery": "^3.6.1",
+        "owl.carousel": "^2.3.4"
+    }
 }
